# CosmoChatbot

./: .env.example  .gitignore  Dockerfile  README.md  chatbot-rules.mdc  main.py  pyproject.toml  requirements.txt
.cursor/rules/: chatbot-rules.mdc
app/: __init__.py
app/agents/: __init__.py  cart_agent.py  checkout_agent.py  manager_agent.py  product_agent.py  shop_agent.py
app/api/: __init__.py  endpoints.py  models.py
app/client/: __init__.py  spring_client.py
app/core/: __init__.py  config.py  hooks.py  security.py
app/db/: database.py  models.py  services.py
app/memory/: memory_manager.py
app/models/: api_models.py
app/prompts/: cart_agent.py  checkout_agent.py  manager_agent.py  product_agent.py  shop_agent.py
app/rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
app/tools/: __init__.py  cart_tools.py  checkout_tools.py  manager_tools.py  product_tools.py  shop_tools.py
